# LocalBot

./: .env.example  .gitignore  Dockerfile  Dockerfile.webui  LICENSE  README.md  ROADMAP.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
patches/: fix-flash-attn-syntax.patch  fix-groq-session-crash.patch  fix-spec-decode-flags.patch  perf-hardware-optimizations.patch
src/localbot/: __init__.py  __main__.py  agent.py  app.py  commands.py  config.py  intent.py  messaging.py  prompts.py  webui.py
src/localbot/adapters/: groq_client.py  llamacpp_client.py  llamacpp_downloader.py  llamacpp_server.py  llamacpp_updater.py  model_registry.py
src/localbot/scheduler/: service.py  store.py
src/localbot/storage/: audit.py  db.py  history.py
src/localbot/tools/: filesystem.py  github_tools.py  log_reader.py  reddit.py  registry.py  scheduler_tools.py  search.py  time_tools.py
tests/: conftest.py  test_agent_needs_tools.py  test_filesystem_symlink.py  test_llamacpp_family_detection.py  test_messaging.py  test_routing_dispatch_filesystem.py  test_scheduler_validate_cron.py  test_search_should_skip.py
