[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "localbot"
version = "0.2.0"
description = "Privacy-first self-hosted AI assistant powered by llama.cpp"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",  # faster HTML parser for BeautifulSoup
]

[project.optional-dependencies]
webui = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pydantic-settings>=2.0",
]

[project.scripts]
localbot = "localbot.app:main"
localbot-webui = "localbot.webui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]
